# tuxtuner

./: .SRCINFO  .gitignore  LICENSE  PKGBUILD  PKGBUILD.local  README.md  install.sh
.github/: README.md
data/: com.github.xavrir.tuxtuner.policy
rust/: Cargo.toml
rust/src/: main.rs  system_info.rs  ui.rs
src/: tuxtuner-helper  tuxtuner.py
