[package]
name = "tuxtuner"
version = "2.0.0"
edition = "2021"
authors = ["Xavrir <xavrir@github.com>"]
description = "System performance control for Linux - CPU threads, GPU modes, and display refresh rates"
license = "MIT"
repository = "https://github.com/Xavrir/tuxtuner"
keywords = ["linux", "gtk", "system", "performance", "hyprland"]
categories = ["gui", "hardware-support"]

[dependencies]
gtk4 = { version = "0.9", features = ["v4_14"] }
libadwaita = { version = "0.7", features = ["v1_5"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
